--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ body{
   color: #f1f1f1;
   font-weight: bold;
   font-size: 16px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
+  letter-spacing: 3px;
 }
 
 .nav-menu a:hover{
